syntax = "proto3";
package proto;

message Account {
  string id = 1;
  string user_id = 2;
  string email = 3;
  string password = 4;
}

message ListAccountsReq {}

message ListAccountsRes {
  Account account = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message CreateAccountReq {
  Account account = 1;
}

message CreateAccountRes {
  Account account = 1;
}

message ReadAccountReq {
  string id = 1;
}

message ReadAccountRes {
  Account account = 1;
}

service AccountService {
  rpc ReadAccount (ReadAccountReq) returns (ReadAccountRes);
  rpc ListAccounts (ListAccountsReq) returns (stream ListAccountsRes);
}
